# GuildNet

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  render.yaml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml
backend/: .env.example  eslint.config.mjs  package-lock.json  package.json
backend/data/: agents.json
backend/src/: agentRunner.ts  agentStore.ts  casperHandler.ts  chain.ts  config.ts  coordinator.ts  server.ts  x402.ts
frontend/: .env.example  package-lock.json  package.json  postinstall.js  tsconfig.tsbuildinfo  vitest.config.ts
frontend/__tests__/: health.test.tsx  utils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: providers-inner.tsx  providers.tsx  wallet-provider.tsx
frontend/contexts/: click-context.tsx
frontend/hooks/: use-chain-agents.ts  use-tasks.ts  use-wallet.ts
frontend/lib/: constants.ts  utils.ts
scripts/: generate-sample-txn.sh
smart-contract/: .env.sample  Cargo.toml  DEPLOY.md  Odra.toml  deploy.sh  rust-toolchain.toml
smart-contract/keys/: casper_cloud_key.pem  casper_secret_key.pem  derived_secret_key.pem  public_key.pem  public_key_hex  secret_key.pem
smart-contract/keys/fresh_keys/: public_key.pem  public_key_hex  secret_key.pem
smart-contract/src/: agent_registry.rs  agent_reputation.rs  lib.rs  task_coordinator.rs  x402.rs
smart-contract/wasm/: AgentRegistry.wasm  AgentReputation.wasm  TaskCoordinator.wasm
(+17 files in other folders)
