[package]
name = "guildnet"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "2.8.0", default-features = false }
casper-eip-712 = { version = "1.2.0", features = ["casper-native"], default-features = false }
ed25519-dalek = "2.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { version = "2.8.0" }

[dev-dependencies]
odra-test = "2.8.0"

[build-dependencies]
odra-build = { version = "2.8.0" }

[features]
default = []
livenet = ["dep:odra-casper-livenet-env"]

[dependencies.odra-casper-livenet-env]
version = "2.8.0"
optional = true

# ── Contract build bin (required by cargo-odra build) ────────────────────────
[[bin]]
name = "guildnet_build_contract"
path = "src/bin/build_contract.rs"
test = false

# ── Schema build bin ──────────────────────────────────────────────────────────
[[bin]]
name = "guildnet_build_schema"
path = "src/bin/build_schema.rs"
test = false

# ── Livenet deploy script ─────────────────────────────────────────────────────
[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"
required-features = ["livenet"]
test = false

[profile.release]
codegen-units = 1
lto           = true
